# python-c-testing

./: CMakeLists.txt  README.md  test.py
python/iterator/: CMakeLists.txt  __init__.py  iterator.c  setup.in.sh
